fix dialog height on safari

--- a/plugins/webgui/public/styles/autopop.css
+++ b/plugins/webgui/public/styles/autopop.css
@@ -1,5 +1,8 @@
-@media (max-width: 600px) {
+@media (max-width: 960px) {
   .auto-pop-dialog-size {
+    height: 100%;
+  }
+  .auto-pop-content-size {
     height: 100%;
   }
 }
